--- a/ecsite-g2/src/main/resources/application.properties
+++ b/ecsite-g2/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.url=jdbc:h2:file:./data/h2db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+
